[package]
name = "fiat-a2dp"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
async-io = { git = "https://github.com/smol-rs/async-io" }
edge-net = { git = "https://github.com/ivmarkov/edge-net" }
edge-executor = { git = "https://github.com/ivmarkov/edge-executor" }

[dependencies]
esp-idf-svc = { version = "0.46", features = ["nightly", "experimental", "critical-section", "embassy-sync", "embassy-time-driver"] }
heapless = "0.7"
num_enum = { version = "0.7", default-features = false }
log = "0.4.17"
enumset = { version = "1", default-features = false }
embassy-time = { version = "0.1", features = ["generic-queue"] }
embassy-futures = "0.1"
embassy-sync = "0.3"
static_cell = { version = "1.2", features = ["nightly"] }
edge-net = { version = "0.3", features = ["nightly"] }
edge-executor = "0.3"

[build-dependencies]
embuild = "0.31.2"
